tests/baselines/reference/privateNameJs-1.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameJs-1.js(3,14): error TS2339: Property '#foo' does not exist on type 'A'.


==== tests/cases/conformance/classes/members/privateNames/privateNameJs-1.js (1 errors) ====
    class A {
        constructor () {
            this.#foo = 3 // Error
                 ~~~~
!!! error TS2339: Property '#foo' does not exist on type 'A'.
        }
    }
    